--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Recipe Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Odin Recipes!</h1>
-    <ul>
-        <li><a href="./spagetti.html">Spagetti</a></li>
-        <li><a href="./steak.html">Steak</a></li>
-        <li><a href="./burgers.html">Burgers</a></li>
-    </ul>
+    <div id="wrapper">
+        <h1>Odin Recipes!</h1>
+        <ul>
+            <li><a href="./spagetti.html">Spagetti</a></li>
+            <li><a href="./steak.html">Steak</a></li>
+            <li><a href="./burgers.html">Burgers</a></li>
+        </ul>
+    </div>
 </body>
 </html>
